--- a/index.html
+++ b/index.html
@@ -19,8 +19,32 @@
     <title>PH tube</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header class="w-11/12 mx-auto">
+      <div
+        class="navbar my-4 flex flex-col md:flex-row items-center justify-center gap-4 md:gap-0"
+      >
+        <div class="navbar-start">
+          <img src="image/Logo.png" alt="" />
+        </div>
+        <div>
+          <button
+            class="btn btn-primary border-none text-black font-medium text-center text-lg bg-[#25252533] hover:bg-[#FF1F3D] hover:text-white"
+          >
+            Sort By View
+          </button>
+        </div>
+        <div class="navbar-end pr-14 md:pr-0">
+          <a
+            href="blog.html"
+            target="_blank"
+            class="btn bg-[#FF1F3D] text-white hover:bg-[#25252533] hover:text-black"
+            >Blog</a
+          >
+        </div>
+      </div>
+      <hr class="h-[2px] bg-[#cbcbcb]" />
+    </header>
+    <main class="w-11/12 mx-auto"></main>
     <script src="phtube.js"></script>
   </body>
 </html>
