added main section

--- a/blog.html
+++ b/blog.html
@@ -18,5 +18,26 @@
     <link rel="stylesheet" href="style.css" />
     <title>Blog</title>
   </head>
-  <body></body>
+  <body>
+    <header class="w-11/12 mx-auto">
+      <div
+        class="navbar my-4 flex flex-col md:flex-row items-center justify-center gap-4 md:gap-0"
+      >
+        <div class="navbar-start">
+          <img src="image/Logo.png" alt="" />
+        </div>
+        <div class="navbar-end pr-14 md:pr-0">
+          <a
+            href="index.html"
+            target="_parent"
+            class="btn bg-[#FF1F3D] text-white hover:bg-[#25252533] hover:text-black"
+            >Go Back</a
+          >
+        </div>
+      </div>
+      <hr class="h-[2px] bg-[#cbcbcb]" />
+    </header>
+    <!-- main section -->
+    <main></main>
+  </body>
 </html>
