--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </div>
         <div>
           <button
-            class="btn btn-primary border-none text-black font-medium text-center text-lg bg-[#25252533] hover:bg-[#FF1F3D] hover:text-white"
+            id="sort-by-view-button"
+            class="btn btn-primary border-none text-black font-medium text-center text-base bg-[#25252533] hover:bg-[#FF1F3D] hover:text-white"
           >
             Sort By View
           </button>
@@ -36,7 +37,7 @@
         <div class="navbar-end pr-14 md:pr-0">
           <a
             href="blog.html"
-            target="_blank"
+            target="_top"
             class="btn bg-[#FF1F3D] text-white hover:bg-[#25252533] hover:text-black"
             >Blog</a
           >
@@ -44,7 +45,32 @@
       </div>
       <hr class="h-[2px] bg-[#cbcbcb]" />
     </header>
-    <main class="w-11/12 mx-auto"></main>
+    <!-- main section -->
+    <main class="w-11/12 mx-auto my-8 md:my-12">
+      <div class="tab-container">
+        <div
+          class="tabs flex flex-wrap justify-center items-center mx-auto gap-2 md:gap-5 text-base"
+          id="tab-container"
+        >
+          <!-- <a class="tab">Home</a> -->
+        </div>
+      </div>
+      <!-- card -->
+      <div
+        id="card-container"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-5"
+      >
+        <!-- card -->
+      </div>
+      <!-- no content -->
+      <div id="no-content" class="mt-5 md:mt-8 hidden">
+        <img class="mx-auto" src="image/Icon.png" alt="" />
+        <h3 class="text-[#171717] text-3xl text-center mt-5">
+          Oops!! Sorry, There is no <br />
+          content here
+        </h3>
+      </div>
+    </main>
     <script src="phtube.js"></script>
   </body>
 </html>
