--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="navbar-end pr-14 md:pr-0">
           <a
             href="blog.html"
-            target="_top"
+            target="_blank"
             class="btn bg-[#FF1F3D] text-white hover:bg-[#25252533] hover:text-black"
             >Blog</a
           >
@@ -71,6 +71,7 @@
         </h3>
       </div>
     </main>
-    <script src="phtube.js"></script>
+
+    <script src="main.js"></script>
   </body>
 </html>
