--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <button
             id="sort-by-view-button"
             class="btn btn-primary border-none text-black font-medium text-center text-base bg-[#25252533] hover:bg-[#FF1F3D] hover:text-white"
+            title="High to Low"
           >
             Sort By View
           </button>
